Fixed a layout issue with button tags

--- a/src/styles/molecules/_molecules.tag.scss
+++ b/src/styles/molecules/_molecules.tag.scss
@@ -37,6 +37,7 @@ button.m-tag {
 
   cursor: pointer;
   margin: 0;
+  padding: 0 0 0 var(--spacer-xs);
 
   &:hover,
   &:active,
